<resources>
    <string name="app_name">StoryUsersApp</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Login or register now and lets create inspiring learning stories together. Happy learning on StoryUsersApp!</string>
    <string name="title_welcome_page">Ready to join StoryUsersApp?</string>
    <string name="title_signup_page">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Sign in first to continue!</string>
    <string name="title_login_page">Login</string>
    <string name="name">Name</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Log Out</string>
    <string name="title_menu_1">Welcome to StoryUsersApp!</string>
    <string name="title_menu_2">Explore Inspiring Stories!</string>
    <string name="title_menu_3">Share your experience!</string>
    <string name="title_menu_4">Learning Together, Growing Together!</string>
    <string name="desc_menu_1">Find inspiration from the stories of our friends who have faced the learning journey at Dicoding!</string>
    <string name="desc_menu_2">With the StoryUsersApp, you can read inspiring stories from friends who have successfully studied and graduated from Dicoding. Find their tips, challenges, and successes here!</string>
    <string name="desc_menu_3">Write your story, share your knowledge and inspire others. Together, we can make learning dreams come true!</string>
    <string name="desc_menu_4">Join now and lets create the future together!</string>
    <string name="learn_now">Join Now</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Insert an image file first!</string>
    <string name="story_description_hint_edit_text">Write your experience here!</string>
    <string name="people_story">Image People Story</string>
    <string name="content_description_add_new_story">Add new story</string>
    <string name="if_email_empty">Email can not be empty!\n\n</string>
    <string name="if_email_invalid">Invalid email!\n</string>
    <string name="if_name_empty">Name can not be empty!</string>
    <string name="if_password_empty">Password can not be empty!</string>
    <string name="if_password_invalid">Invalid password!\n</string>
    <string name="hint_name_edit_text">Enter your name</string>
    <string name="hint_email_edit_text">Enter your email</string>
    <string name="hint_pass_edit_text">Enter your password</string>
    <string name="detail_desc">Picture</string>
    <string name="username">Username</string>
    <string name="detail_story">Detail Story</string>
    <string name="title_activity_maps">Maps Page</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Coba lagi</string>
    <string name="welcome_user">%1$s , Tell your story in StoryUsersApp\n</string>
    <string name="location">Location</string>
</resources>