<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/indicator_progress"
        android:layout_width="170dp"
        android:layout_height="134dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_upl"
            android:layout_width="328dp"
            android:layout_height="249dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_place_holder" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_upl">

            <Button
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue2"
                android:text="@string/camera"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue1"
                android:text="@string/gallery"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
        android:id="@+id/desc_story"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints="description"
        android:background="@drawable/custom_layout_edit_text"
        android:gravity="top|start"
        android:hint="@string/story_description_hint_edit_text"
        android:inputType="textMultiLine"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            app:layout_constraintTop_toBottomOf="@+id/desc_story"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/blue4"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="264dp"
            android:layout_marginEnd="40dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blue4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>